# mysql8

./: .gitignore  CHANGES  README.md  dune-project  mysql8.opam  mysql_stubs.c  ocaml-mysql8.opam
.github/workflows/: main.yml
src/: dune  mysql.ml  mysql.mli  mysql_stubs.c
src/config/: discover.ml
